--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="%PUBLIC_URL%/Brown_logo_black.png" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+    
+      name="Visualizing Virality by Brown Insititute"
+      content="Brown Insititute and KFAI collaboration aimed at illustrating the algorithms that define what you see on social media platforms."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Visualizing Virality</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
