text and tweet sizing

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,25 @@
     <meta name="theme-color" content="#000000" />
     <meta property="og:image" content="%PUBLIC_URL%/Brown_logo_black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta
-    
-      name="Visualizing Virality by Brown Insititute"
-      content="Brown Insititute and KFAI collaboration aimed at illustrating the algorithms that define what you see on social media platforms."
-    />
-    <!--
+    <!-- Primary Meta Tags -->
+    <title>Visualizing Virality </title>
+    <meta name="title" content="Visualizing Virality ">
+    <meta name="description" content="Brown Insititute and KFAI collaboration aimed at illustrating the algorithms that define what you see on social media platforms.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://virality.brown.columbia.edu/">
+    <meta property="og:title" content="Visualizing Virality ">
+    <meta property="og:description" content="Brown Insititute and KFAI collaboration aimed at illustrating the algorithms that define what you see on social media platforms.">
+    <meta property="og:image" content="https://virality.brown.columbia.edu/Brown_logo_black.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://virality.brown.columbia.edu/">
+    <meta property="twitter:title" content="Visualizing Virality ">
+    <meta property="twitter:description" content="Brown Insititute and KFAI collaboration aimed at illustrating the algorithms that define what you see on social media platforms.">
+    <meta property="twitter:image" content="https://virality.brown.columbia.edu/Brown_logo_black.png">
+        <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
@@ -25,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Visualizing Virality</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
